src/objects/Off_Study_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ApprovalURL__c</fullName>
        <label>ApprovalURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRF</label>
        <referenceTo>CRF__c</referenceTo>
        <relationshipLabel>Off Study Details</relationshipLabel>
        <relationshipName>Off_Study_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>CompletedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_patient_went_off_study__c</fullName>
        <label>Date patient went off study</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Did_patient_withdraw_for_survival__c</fullName>
        <description>Did patient withdraw consent to be followed for survival?</description>
        <inlineHelpText>Did patient withdraw consent to be followed for survival?</inlineHelpText>
        <label>Did patient withdraw for survival</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Save_and_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Save and Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Off_Study_CRF__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Off Study CRF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OriginalCRF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OriginalCRF</label>
        <referenceTo>Off_Study_Detail__c</referenceTo>
        <relationshipLabel>Off Study Details</relationshipLabel>
        <relationshipName>Off_Study_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_Died__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient Died</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_completed_study_per_protocol__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Patient completed study per protocol</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_did_not_have_surgery__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Patient did not have surgery.</description>
        <inlineHelpText>Patient did not have surgery.</inlineHelpText>
        <label>Patient did not have surgery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_did_not_have_surgery_reason__c</fullName>
        <label>Patient did not have surgery reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_did_not_want_to_complete_MRI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Patient did not want to complete study MRI scans.</description>
        <inlineHelpText>Patient did not want to complete study MRI scans.</inlineHelpText>
        <label>Patient did not want to complete MRI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_did_nt_continue_on_treatment_arm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Patient did not continue on treatment arm.</description>
        <inlineHelpText>Patient did not continue on treatment arm.</inlineHelpText>
        <label>Patient did&apos;nt continue on treatment arm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_did_nt_want_to_complete_core_bio__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Patient did not want to complete study core biopsy.</description>
        <inlineHelpText>Patient did not want to complete study core biopsy.</inlineHelpText>
        <label>Patient did&apos;nt want to complete core bio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Patient_withdrew_for_specimens__c</fullName>
        <description>Patient withdrew consent for use of specimens for further research?</description>
        <inlineHelpText>Patient withdrew consent for use of specimens for further research?</inlineHelpText>
        <label>Patient withdrew for specimens</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_CRF_Id__c</fullName>
        <label>Root CRF Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approval Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted by Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who is sign and submitting the record</description>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Off_Study_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Treatment_arm_other_reason__c</fullName>
        <label>Treatment arm other reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>Off Study Details</relationshipLabel>
        <relationshipName>Off_Study_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Why_patient_didnt_continue_treatment_arm__c</fullName>
        <description>Why Patient did not continue treatment arm.</description>
        <inlineHelpText>Why Patient did not continue treatment arm.</inlineHelpText>
        <label>Why patient didnt continue treatment arm</label>
        <picklist>
            <picklistValues>
                <fullName>Due to (S)AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pg_OffStudy_Id__c</fullName>
        <label>pg_OffStudy_Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pg_status__c</fullName>
        <label>pg_status</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <label>Off Study Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Off Study Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Off Study Details</pluralLabel>
    <recordTypes>
        <fullName>AdHoc</fullName>
        <active>true</active>
        <label>AdHoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>Approval_Pending</fullName>
        <active>true</active>
        <label>Approval Pending</label>
    </recordTypes>
    <recordTypes>
        <fullName>Live</fullName>
        <active>true</active>
        <label>Live</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Date_patient_went_off_study_date_valid</fullName>
        <active>true</active>
        <description>The date field should not be a future date.</description>
        <errorConditionFormula>Date_patient_went_off_study__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Date_patient_went_off_study__c</errorDisplayField>
        <errorMessage>You have entered a future date</errorMessage>
    </validationRules>
</CustomObject>